unpackaged/main/default/objects/Upgrade_Package_Lookup__c/Upgrade_Package_Lookup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Upgrade Package Lookup Table</label>
</CustomObject>