unpackaged/main/default/objects/Upgrade_Package_Lookup__c/fields/Renewal_SKU__c.field-meta.xml
<CustomField>
    <fullName>Renewal_SKU__c</fullName>
    <label>Renewal SKU</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>