unpackaged/main/default/objects/Upgrade_Package_Lookup__c/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <label>Renewal Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>