unpackaged/main/default/objects/Upgrade_Package_Lookup__c/fields/Upgrade_SKU__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_SKU__c</fullName>
    <label>Upgrade SKU Outside</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>