unpackaged/main/default/objects/Upgrade_Package_Lookup__c/listViews/Tiers.listView-meta.xml
<ListView>
    <fullName>Tiers</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Level__c</columns>
    <columns>Renewal_SKU__c</columns>
    <columns>Upgrade_SKU__c</columns>
    <columns>Renewal_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tiers</label>
</ListView>